# Test-Bench

./: .gitignore  log.html  output.xml  report.html
DUT_Firmware/: CMakeLists.txt  prj.conf
DUT_Firmware/boards/: dutBoard.overlay
DUT_Firmware/include/: dut_dio.h  dut_pwm_in.h  dut_pwm_out.h  dut_spi.h  dut_uart.h
DUT_Firmware/src/: dut_dio.c  dut_pwm_in.c  dut_pwm_out.c  dut_spi.c  dut_uart.c  main.c
Docs/: ADC.html  DIO.html  PWM_IN.html  PWM_OUT.html  SPI.html  UART.html  adc_test_bench_documentation.md  dio_external_dut_test_documentation.md  dio_test_bench_documentation.md  home.html  index.html  spi_external_dut_test_documentation.md  spi_test_bench_documentation.md
Host/: TestBenchLibrary.py  adc_test.py  dio_test.py  ping_test.py  pwmINStatistics.py  pwm_statistics_report.csv  spi_test.py  uart_test.robot
Robot_Framework/: log.html  output.xml  pwmOUT_Test.robot  report.html  uart_test.robot
Robot_Framework/resources/: testbench_serial.py
Robot_Framework/tests/: 01_dio.robot  02_adc.robot  03_spi.robot  (+9 more)
Zephyr_Firmware/: CMakeLists.txt  prj.conf
Zephyr_Firmware/boards/: blackpill_f401cc.overlay  testBench.overlay
Zephyr_Firmware/include/: testbench_adc.h  testbench_dio.h  testbench_pwmIN.h  testbench_pwmOUT.h  testbench_spi.h  testbench_uart.h
Zephyr_Firmware/src/: main.c  testbench_adc.c  testbench_dio.c  testbench_pwmIN.c  testbench_pwmOUT.c  testbench_spi.c  testbench_uart.c
Zephyr_Firmware/src/modules/adc/: adc_service.c  adc_service.h
Zephyr_Firmware/src/modules/dio/: dio_service.c  dio_service.h
basic_example/: README.md
(+5 files in other folders)
